--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Play&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="app.js"></script>
@@ -93,7 +93,7 @@
                     <button class="btn">В КАТАЛОГ</button>
                 </div>
             </div>
-            <img class="arrow" src="/img/intro/Arrow.svg" alt="Arrow">
+            <img class="arrow" src="img/intro/Arrow.svg" alt="Arrow">
         </div>
     </div>
 
@@ -104,27 +104,27 @@
                 <h2 class="kinds__title"><span class="text__color">Идеальное решение</span> для Вашего дома и офиса</h2>
                 <div class="chairs">
                     <div class="chairs__item">
-                        <img class="chair__img" src="/img/kinds/chair1.png" alt="chair1">
+                        <img class="chair__img" src="img/kinds/chair1.png" alt="chair1">
                         <div class="item__text">Кресла-мешки</div>
                     </div>
                     <div class="chairs__item">
-                        <img class="chair__img" src="/img/kinds/chair2.png" alt="chair2">
+                        <img class="chair__img" src="img/kinds/chair2.png" alt="chair2">
                         <div class="item__text">Кресла-мешки</div>
                     </div>
                     <div class="chairs__item">
-                        <img class="chair__img" src="/img/kinds/chair3.png" alt="chair3">
+                        <img class="chair__img" src="img/kinds/chair3.png" alt="chair3">
                         <div class="item__text">Кресла-мешки</div>
                     </div>
                     <div class="chairs__item">
-                        <img class="chair__img" src="/img/kinds/chair4.png" alt="chair4">
+                        <img class="chair__img" src="img/kinds/chair4.png" alt="chair4">
                         <div class="item__text">Кресла-мешки</div>
                     </div>
                     <div class="chairs__item">
-                        <img class="chair__img" src="/img/kinds/chair5.png" alt="chair5">
+                        <img class="chair__img" src="img/kinds/chair5.png" alt="chair5">
                         <div class="item__text">Кресла-мешки</div>
                     </div>
                     <div class="chairs__item">
-                        <img class="chair__img" src="/img/kinds/chair6.png" alt="chair6">
+                        <img class="chair__img" src="img/kinds/chair6.png" alt="chair6">
                         <div class="item__text">Кресла-мешки</div>
                     </div>
                 </div>
@@ -149,19 +149,19 @@
                 <h2 class="partners__title">Наши партнеры</h2>
                 <div class="partners__inner slider">
                    <div class="slider__item">
-                        <img class="partner" src="/img/aboutUs/partner1.svg" alt="partner1">
+                        <img class="partner" src="img/aboutUs/partner1.svg" alt="partner1">
                     </div>
                     <div class="slider__item">
-                        <img class="partner" src="/img/aboutUs/partner1.svg" alt="partner1">
+                        <img class="partner" src="img/aboutUs/partner1.svg" alt="partner1">
                     </div>
                     <div class="slider__item">
-                        <img class="partner" src="/img/aboutUs/partner1.svg" alt="partner1">
+                        <img class="partner" src="img/aboutUs/partner1.svg" alt="partner1">
                     </div>
                     <div class="slider__item">
-                        <img class="partner" src="/img/aboutUs/partner1.svg" alt="partner1">
+                        <img class="partner" src="img/aboutUs/partner1.svg" alt="partner1">
                     </div>
                     <div class="slider__item">
-                        <img class="partner" src="/img/aboutUs/partner1.svg" alt="partner1">
+                        <img class="partner" src="img/aboutUs/partner1.svg" alt="partner1">
                     </div>
                 </div>
             </div>
